--- a/Formulario-Centros-Re/UNAH-VS.html
+++ b/Formulario-Centros-Re/UNAH-VS.html
@@ -140,25 +140,22 @@
         <div class="Historia">
             <br>
             <h2>Historia</h2>
-            <p>Fue alrededor de 1980 cuando se comienza a hacer las primeras acciones concretas para la creación&nbsp; de un centro universitario en Comayagua, ex capital de Honduras, con el objetivo de dar respuesta a la gran demanda estudiantil que persistia en aquella epoca.</span></p><p style="text-align: justify;"><span style="font-size: medium;">Un grupo de estudiantes universitarios de la UNAH lucha por obtener ese proyecto para lo cual organizaron la Asociación Comayagüense de Estudiantes Universitarios (ACEU).</span></p><p style="text-align: justify;"><span style="font-size: medium;">En el año de 1995 se creó la fundación "Para el Desarrollo de Comayagua" (FDC), además , con el apoyo de un grupo de ciudadanos entusiastas y autoridades nacionales se logra fundar el Centro Universitario Regional del Centro&nbsp;&nbsp; (CURC) que inicia sus actividades el 17 de Junio de 1996 con una matrícula de 711 alumnos de ambos generos.</p>
-            <strong>Carreras con las que inició el centro :</strong>
-            <ul>
-                <li>Técnico en Produccioón de alimnetos</li>
-                <li>Técnico en Producción Animal (Bitecnea)</li>
-                <li>Ingenieria AgroIndustrial</li>
-                <li>Licenciatura en Comercio Internacional con Orientación en la Agroindustria.</li>
-            </ul>
+            <p>
+                    Mediante Acuerdo No.215-2007 de la CT-UNAH, a partir del 1 de febrero del 2007, el Centro Universitario Regional del Norte (CURN) se convierte en la Universidad Nacional Autónoma de Honduras en el Valle de Sula "UNAH-VS con la finalidad de connotar la presencia de la "UNAH" no solo en la Ciudad de San Pedro Sula, sino también en la zona de mayor crecimiento en el país, como lo es el Valle de Sula, dejando establecido que el Centro Académico conocido como CURN, entra en un proceso de profundos cambios estructurales para servir mejor a los estudiantes y al desarrollo de las comunidades del valle de sula.
+
+                    El 24 de abril del 2008, la Comisión de Transición de la UNAH, mediante acuerdo No. 357-2008, aprobó el Modelo Teórico de la UNAH-VS, el cual entró en vigencia a partir de la fecha y manda en su artículo cuarto, que la desconcentración de funciones de la sede central a la UNAH-VS deberá realizarse siguiendo un plan concertado entre las autoridades de la sede central que estará representado por la Vicerrectoría Académica y el Secretario Ejecutivo de Administración y Finanzas y el Señor Director de la UNAH-VS.
+            </p>
             <img src="" alt="">
         </div>
         <hr>
         <div class="Mision">
             <h2>Misión</h2>
-            <p>Somos la Universidad Nacional Autónoma de Honduras en la región central, comprometidos a generar y difundir conocimiento científico, tecnológico y humanístico, para la formación integral de profesionales capaces de dar solución a las demandas de la sociedad y contribuir al desarrollo sostenible de la región.</p>
+            <p>La UNAH-VS es una institución académica de excelencia, líder en investigación científica y tecnológica en la región del Valle de Sula vinculada al desarrollo cultural y sostenible del país,que proporcione soluciones innovadoras, pertinentes y de calidad a los problemas de la región y que sobre todo, contribuya a la formación de personas con altos valores morales y cívicos.</p>
         </div>
         <hr>
         <div class="Vision">
             <h2>Visión</h2>
-            <p>Seremos al 2018, la Universidad Nacional Autónoma de Honduras en la región central, líder en la formación integral de profesionales que respondan a la demanda social, reconocida a nivel nacional e internacional, por generar y difundir conocimiento científico, tecnológico y humanístico,  con los mas altos estándares de calidad  para el desarrollo cultural, social, político y económico del país.</p>
+            <p>Somos una instancia gestora a nivel regional del fomento y desarrollo de la investigación científica y tecnológica, de la formación del recurso humano investigador de la UNAH-VS, de la difusión de eventos científicos y resultados de innovación, y sobre todo de promover los incentivos a la investigación. Así mismo, nos vemos con la necesidad de plantear soluciones a los problemas nacionales, particularmente del Valle de Sula para impulsar la democracia, formar un profesional humanista y sensitivo a las demandas de transformación de la sociedad.</p>
         </div>
     </div>
 
