Pag UNAH-TEC_AGUAN

--- a/Formulario-Centros-Re/UNAH-TEC_AGUAN.html
+++ b/Formulario-Centros-Re/UNAH-TEC_AGUAN.html
@@ -140,25 +140,25 @@
         <div class="Historia">
             <br>
             <h2>Historia</h2>
-            <p>Fue alrededor de 1980 cuando se comienza a hacer las primeras acciones concretas para la creación&nbsp; de un centro universitario en Comayagua, ex capital de Honduras, con el objetivo de dar respuesta a la gran demanda estudiantil que persistia en aquella epoca.</span></p><p style="text-align: justify;"><span style="font-size: medium;">Un grupo de estudiantes universitarios de la UNAH lucha por obtener ese proyecto para lo cual organizaron la Asociación Comayagüense de Estudiantes Universitarios (ACEU).</span></p><p style="text-align: justify;"><span style="font-size: medium;">En el año de 1995 se creó la fundación "Para el Desarrollo de Comayagua" (FDC), además , con el apoyo de un grupo de ciudadanos entusiastas y autoridades nacionales se logra fundar el Centro Universitario Regional del Centro&nbsp;&nbsp; (CURC) que inicia sus actividades el 17 de Junio de 1996 con una matrícula de 711 alumnos de ambos generos.</p>
-            <strong>Carreras con las que inició el centro :</strong>
-            <ul>
-                <li>Técnico en Produccioón de alimnetos</li>
-                <li>Técnico en Producción Animal (Bitecnea)</li>
-                <li>Ingenieria AgroIndustrial</li>
-                <li>Licenciatura en Comercio Internacional con Orientación en la Agroindustria.</li>
-            </ul>
+            <p>
+                    ANTECEDENTES HISTÓRICOS DEL CENTRO UNIVERSITARIO REGIONAL DEL VALLE DEL AGUÁN.
+
+                    En 1997 se inició un movimiento local que gestionó ante las autoridades universitarias la fundación del  CURVA. Para llevar a cabo este proceso se organizó una Junta Directiva encabezada por el Ing. José Tomas Ponce Posas, y el Dr. Ramón Cáceres acompañados por otros ciudadanos  de Olanchito. Como respuesta a estas gestiones se logró el 1 de diciembre de 1998, que la Universidad Nacional Autónoma de Honduras- UNAH aprobara la creación del CURVA.
+                    
+                    En enero de 1999, se constituye el Comité de Apoyo Permanente al Centro Universitario con el fin de poner en funcionamiento dicha institución. Durante ese año, se aprueba la apertura del CURVA mediante acta N° 704, acuerdo N°468-99, siendo Rectora de la UNAH y Presidenta del Consejo Universitario la Dra. Ana Belén Castillo; asimismo se aprobaron tres carreras: Ingeniería Agroindustrial, Técnico en Procesamiento de Lácteos y Técnico en Producción Pecuaria y las asignaturas de formación general.
+            </p>
+            
             <img src="" alt="">
         </div>
         <hr>
         <div class="Mision">
             <h2>Misión</h2>
-            <p>Somos la Universidad Nacional Autónoma de Honduras en la región central, comprometidos a generar y difundir conocimiento científico, tecnológico y humanístico, para la formación integral de profesionales capaces de dar solución a las demandas de la sociedad y contribuir al desarrollo sostenible de la región.</p>
+            <p></p>
         </div>
         <hr>
         <div class="Vision">
             <h2>Visión</h2>
-            <p>Seremos al 2018, la Universidad Nacional Autónoma de Honduras en la región central, líder en la formación integral de profesionales que respondan a la demanda social, reconocida a nivel nacional e internacional, por generar y difundir conocimiento científico, tecnológico y humanístico,  con los mas altos estándares de calidad  para el desarrollo cultural, social, político y económico del país.</p>
+            <p></p>
         </div>
     </div>
 
