--- a/Formulario-Centros-Re/UNAH-CURLA.html
+++ b/Formulario-Centros-Re/UNAH-CURLA.html
@@ -140,25 +140,22 @@
         <div class="Historia">
             <br>
             <h2>Historia</h2>
-            <p>Fue alrededor de 1980 cuando se comienza a hacer las primeras acciones concretas para la creación&nbsp; de un centro universitario en Comayagua, ex capital de Honduras, con el objetivo de dar respuesta a la gran demanda estudiantil que persistia en aquella epoca.</span></p><p style="text-align: justify;"><span style="font-size: medium;">Un grupo de estudiantes universitarios de la UNAH lucha por obtener ese proyecto para lo cual organizaron la Asociación Comayagüense de Estudiantes Universitarios (ACEU).</span></p><p style="text-align: justify;"><span style="font-size: medium;">En el año de 1995 se creó la fundación "Para el Desarrollo de Comayagua" (FDC), además , con el apoyo de un grupo de ciudadanos entusiastas y autoridades nacionales se logra fundar el Centro Universitario Regional del Centro&nbsp;&nbsp; (CURC) que inicia sus actividades el 17 de Junio de 1996 con una matrícula de 711 alumnos de ambos generos.</p>
-            <strong>Carreras con las que inició el centro :</strong>
-            <ul>
-                <li>Técnico en Produccioón de alimnetos</li>
-                <li>Técnico en Producción Animal (Bitecnea)</li>
-                <li>Ingenieria AgroIndustrial</li>
-                <li>Licenciatura en Comercio Internacional con Orientación en la Agroindustria.</li>
-            </ul>
+            <p>
+                El honorable Consejo Universitario crea el Centro Regional Universitario del Litoral Atlántico CURLA, el 29 de mayo de 1967, según acuerdo No 5. Empezó a funcionar en la ciudad universitaria, pero es trasladado a la Ciudad de La Ceiba a partir de 1969, utilizando para su funcionamiento las instalaciones de la escuela Cristóbal Colon, que en ese entonces estaba ubicada en el bulevar 15 septiembre, esquina opuesta a Banco Central de Honduras, edificio de madera, el que se caracterizaba por su estilo caribeño, compatible con el resto de edificaciones construidas en la zona del norte de Honduras.
+                A partir de 1969 el Centro Regional es trasladado al lugar donde hoy se encuentra, producto de una donación que realizó la Standard Fruit Company de Honduras a la Universidad Nacional.
+                El área de donación fue de 90 has. las cuales fueron distribuidas en áreas de cultivo, instalaciones administrativas y aulas y laboratorios, los que servirían para formar profesionales en las carreras de Ingeniería Agronómica e Ingeniería Forestal; construyendo en esa época únicamente el edificio administrativo, donde actualmente funciona la carrera de Enfermería, estudios Generales ,donde estaban ubicadas las oficinas de los 20 primeros docentes de UNAH-CURLA, laboratorio de Química, laboratorio de Suelo, laboratorio de Nutrición Animal, laboratorio de Biología y la Coordinación Regional de Investigación. Los dos edificios de Matemáticas y Forestal fueron construidos posteriormente.
+            </p>
             <img src="" alt="">
         </div>
         <hr>
         <div class="Mision">
             <h2>Misión</h2>
-            <p>Somos la Universidad Nacional Autónoma de Honduras en la región central, comprometidos a generar y difundir conocimiento científico, tecnológico y humanístico, para la formación integral de profesionales capaces de dar solución a las demandas de la sociedad y contribuir al desarrollo sostenible de la región.</p>
+            <p>Somos el Centro Universitario de la Universidad Nacional Autónoma de Honduras en el Caribe Hondureño, desarrollando la Educación Superior de excelencia en los ámbitos de producción y acción científica, en las áreas agroforestal, biológica, ambiental, marino costero, turística, ecónomo-administrativa y de la salud , con pensamiento crítico, líderes en investigación y vinculación con la sociedad , capaces de transformar la realidad nacional e internacional con responsabilidad, equidad y sostenibilidad en un mundo globalizado.</p>
         </div>
         <hr>
         <div class="Vision">
             <h2>Visión</h2>
-            <p>Seremos al 2018, la Universidad Nacional Autónoma de Honduras en la región central, líder en la formación integral de profesionales que respondan a la demanda social, reconocida a nivel nacional e internacional, por generar y difundir conocimiento científico, tecnológico y humanístico,  con los mas altos estándares de calidad  para el desarrollo cultural, social, político y económico del país.</p>
+            <p>Para el 2018, ser la Institución líder de la Educación Superior en el caribe hondureño, vanguardista, orientada al perfeccionamiento de la educación integral hacia el desarrollo humano sostenible, con gobierno democrático, organizado en redes y descentralizada, moderna y transparente en la rendición de cuentas, protagonista en la transformación de la sociedad, constituida por recurso humano comprometido con lo académico, productivo, científico, ético y humanista.</p>
         </div>
     </div>
 
