--- a/Formulario-Centros-Re/UNAH-CUROC.html
+++ b/Formulario-Centros-Re/UNAH-CUROC.html
@@ -140,25 +140,23 @@
         <div class="Historia">
             <br>
             <h2>Historia</h2>
-            <p>Fue alrededor de 1980 cuando se comienza a hacer las primeras acciones concretas para la creación&nbsp; de un centro universitario en Comayagua, ex capital de Honduras, con el objetivo de dar respuesta a la gran demanda estudiantil que persistia en aquella epoca.</span></p><p style="text-align: justify;"><span style="font-size: medium;">Un grupo de estudiantes universitarios de la UNAH lucha por obtener ese proyecto para lo cual organizaron la Asociación Comayagüense de Estudiantes Universitarios (ACEU).</span></p><p style="text-align: justify;"><span style="font-size: medium;">En el año de 1995 se creó la fundación "Para el Desarrollo de Comayagua" (FDC), además , con el apoyo de un grupo de ciudadanos entusiastas y autoridades nacionales se logra fundar el Centro Universitario Regional del Centro&nbsp;&nbsp; (CURC) que inicia sus actividades el 17 de Junio de 1996 con una matrícula de 711 alumnos de ambos generos.</p>
-            <strong>Carreras con las que inició el centro :</strong>
-            <ul>
-                <li>Técnico en Produccioón de alimnetos</li>
-                <li>Técnico en Producción Animal (Bitecnea)</li>
-                <li>Ingenieria AgroIndustrial</li>
-                <li>Licenciatura en Comercio Internacional con Orientación en la Agroindustria.</li>
-            </ul>
+            <p>
+                    El CUROC se encuentra situado al nor-oeste de Honduras a una altitud aproximada de 1150 metros, en el Municipio de Santa Rosa de Copan del Departamento de Copan, específicamente en las afueras de la Ciudad de Santa Rosa de Copan (1 km del parque central), que es la capital del Departamento y la más importante en el occidente de Honduras con una población aproximada de 42,000 personas.
+
+                    El Centro fue inaugurado el 23 de octubre de 1996, fue creado en el marco de modernización y reestructuración de la UNAH para atender las necesidades de educación superior de la región occidental de Honduras. Su creación fue el resultado de la iniciativa de algunos vecinos, organizaciones de la localidad y de las autoridades de la UNAH. Fue creada con el objetivo de que se constituyese en un centro de educación superior que venga a suplir las necesidades de formación universitaria de los jóvenes de la región.
+            </p>
+            
             <img src="" alt="">
         </div>
         <hr>
         <div class="Mision">
             <h2>Misión</h2>
-            <p>Somos la Universidad Nacional Autónoma de Honduras en la región central, comprometidos a generar y difundir conocimiento científico, tecnológico y humanístico, para la formación integral de profesionales capaces de dar solución a las demandas de la sociedad y contribuir al desarrollo sostenible de la región.</p>
+            <p></p>
         </div>
         <hr>
         <div class="Vision">
             <h2>Visión</h2>
-            <p>Seremos al 2018, la Universidad Nacional Autónoma de Honduras en la región central, líder en la formación integral de profesionales que respondan a la demanda social, reconocida a nivel nacional e internacional, por generar y difundir conocimiento científico, tecnológico y humanístico,  con los mas altos estándares de calidad  para el desarrollo cultural, social, político y económico del país.</p>
+            <p></p>
         </div>
     </div>
 
