--- a/Formulario-Centros-Re/UNAH-CURNO.html
+++ b/Formulario-Centros-Re/UNAH-CURNO.html
@@ -140,25 +140,21 @@
         <div class="Historia">
             <br>
             <h2>Historia</h2>
-            <p>Fue alrededor de 1980 cuando se comienza a hacer las primeras acciones concretas para la creación&nbsp; de un centro universitario en Comayagua, ex capital de Honduras, con el objetivo de dar respuesta a la gran demanda estudiantil que persistia en aquella epoca.</span></p><p style="text-align: justify;"><span style="font-size: medium;">Un grupo de estudiantes universitarios de la UNAH lucha por obtener ese proyecto para lo cual organizaron la Asociación Comayagüense de Estudiantes Universitarios (ACEU).</span></p><p style="text-align: justify;"><span style="font-size: medium;">En el año de 1995 se creó la fundación "Para el Desarrollo de Comayagua" (FDC), además , con el apoyo de un grupo de ciudadanos entusiastas y autoridades nacionales se logra fundar el Centro Universitario Regional del Centro&nbsp;&nbsp; (CURC) que inicia sus actividades el 17 de Junio de 1996 con una matrícula de 711 alumnos de ambos generos.</p>
-            <strong>Carreras con las que inició el centro :</strong>
-            <ul>
-                <li>Técnico en Produccioón de alimnetos</li>
-                <li>Técnico en Producción Animal (Bitecnea)</li>
-                <li>Ingenieria AgroIndustrial</li>
-                <li>Licenciatura en Comercio Internacional con Orientación en la Agroindustria.</li>
-            </ul>
+            <p>El Centro Universitario Regional Nor-Oriental (CURNO) se inauguró el 12 de junio de 1997, al acto inaugural asistieron el Ex Rector de la UNAH Dr. René Sagastume, la Rectora Dra. Ana Belén Castillo, el Vicerrector Abg. Roberto Bográn Idiáquez, el Secretario General Dr. Juan Ramón Pineda, el Presidente de la Federación de Estudiantes Universitarios de Honduras (FEUH) el Bachiller José Tito Castillo.
+
+                    El CURNO cuenta con su propio edificio, que fue adquirido a un costo de 4.5 millones de lempiras. Inicialmente el CURNO empezó sus actividades académicas en el período corto del año 1997, con una matrícula de 325 alumnos y 12 docentes. Para el tercer período hubo un incremento en la matricula y se llegó a 520 estudiantes y 18 docentes.
+            </p>
             <img src="" alt="">
         </div>
         <hr>
         <div class="Mision">
             <h2>Misión</h2>
-            <p>Somos la Universidad Nacional Autónoma de Honduras en la región central, comprometidos a generar y difundir conocimiento científico, tecnológico y humanístico, para la formación integral de profesionales capaces de dar solución a las demandas de la sociedad y contribuir al desarrollo sostenible de la región.</p>
+            <p></p>
         </div>
         <hr>
         <div class="Vision">
             <h2>Visión</h2>
-            <p>Seremos al 2018, la Universidad Nacional Autónoma de Honduras en la región central, líder en la formación integral de profesionales que respondan a la demanda social, reconocida a nivel nacional e internacional, por generar y difundir conocimiento científico, tecnológico y humanístico,  con los mas altos estándares de calidad  para el desarrollo cultural, social, político y económico del país.</p>
+            <p></p>
         </div>
     </div>
 
