--- a/Formulario-Centros-Re/UNAH-CURNO.html
+++ b/Formulario-Centros-Re/UNAH-CURNO.html
@@ -140,39 +140,21 @@
         <div class="Historia">
             <br>
             <h2>Historia</h2>
-            <p>A partir del año 1993 se inician las gestiones, con el propósito de incorporar nuestra región a ese proceso de desarrollo integral, y de esta forma se nos permitiera optar a mejores escenarios de calidad de vida de un sector históricamente marginado en el proceso de educación universitaria presencial; pero determinante en la generación de ingresos que contribuyen significativamente a la sostenibilidad de las demandas de la población nacional; aunque los mismos no se retribuyen equitativamente en beneficio de las necesidades de esta región. Es así que en el año 2001 se convoca a un cabildo abierto en la ciudad de Danlí, en el cual se elige al Grupo Gestor, el cual se propone como meta incorporar a la región a este ansiado sueño.</p>   
-            <p>Es importante destacar que para el inicio de este proyecto contamos con el soporte de la entonces Rectora Dra. Ana Belén Castillo, y el apoyo incondicional de la Dirección de Docencia a cargo de la Licda. Teresa Lirios, quien nos asesora en la elaboración de la propuesta inicial, la cual se mejora en las consultas con todos los actores productivos y fuerzas vivas de la zona, dicha propuesta mejorada se presenta ante la Dirección de Docencia, Consejo Universitario y Claustro Pleno, quién por recorte presupuestario de la UNAH deja en suspenso su aprobación, quedando sujeto la misma de adquirir el renglón presupuestario respectivo para la iniciación y sostenimiento del mismo según acuerdo 002-2003-CPO.</p>
-            <p>
-                Paralelo a todo este proceso, el Grupo Gestor con el apoyo de las fuerzas vivas de la región oriental y específicamente de la Municipalidad de Danlí, la cual aprueba un presupuesto inicial de los 500,000.00 Lempiras más la donación de un terreno de 8 manzanas ubicadas frente a la carretera panamericana en el corredor de la ciudad de El Paraíso, y con el apoyo de la Rectoría de la Universidad "José Cecilio del Valle" a través de la Rectora Abogada Irma Acosta de Fortín; un grupo de Alumnos de dicha Universidad y la asesoría del Departamento de Arquitectura de la UNAH se elaboran los planos, diseños y maquetas del proyecto universitario presencial de oriente, todo lo que fue realizado con fondos de la Alcaldía Municipal de Danlí, más el aporte significativo de la Tele Maratón organizada por el Grupo Gestor, Manos Amigas, periodistas y propietarios de medios de comunicación.
-                
-                Posteriormente con el nombramiento del Diputado Don José Celín Discua como Coordinador departamental del Grupo Gestor gracias a su gestión se obtienen: cuatro millones de lempiras para iniciar la construcción del edificio en su primera etapa, fondos transferidos a la Corporación Municipal de Danlí.
+            <p>El Centro Universitario Regional Nor-Oriental (CURNO) se inauguró el 12 de junio de 1997, al acto inaugural asistieron el Ex Rector de la UNAH Dr. René Sagastume, la Rectora Dra. Ana Belén Castillo, el Vicerrector Abg. Roberto Bográn Idiáquez, el Secretario General Dr. Juan Ramón Pineda, el Presidente de la Federación de Estudiantes Universitarios de Honduras (FEUH) el Bachiller José Tito Castillo.
 
-                En el año 2005 con el nombramiento por parte del Congreso Nacional de la Comisión de Transición, la misma nos genera espacios de apertura y dicha Comisión nombra a la Dra. Norma Martín de Reyes para darle seguimiento al proyecto y buscar su consolidación; es en esta coyuntura donde se reorienta el proyecto, y el objetivo es salirse del criterio tradicional de otros Centros Regionales e insertar el mismo para potenciar y encauzar el desarrollo de la región.
-
-                Es así que con la asesoría de la Junta de Transición de la UNAH, el Grupo Gestor elabora un nuevo perfil de proyecto, tomando como base el diagnóstico de la región y aplicando instrumentos a estudiantes de ultimo año y egresados de carrera de educación media del departamento, más los insumos de los diferentes sectores productivos de la región y la asesoría de la Universidad Tecnológica de Costa Rica, se determina replantear nuestro proyecto en un Centro Tecnológico Universitario que responda a potenciar el desarrollo regional y nacional y nos permita competir en el mercado internacional de acuerdo a las exigencias de control y calidad, y así contribuir a una mejor calidad de vida e incorporar a la región oriental en el proceso de desarrollo nacional.
+                    El CURNO cuenta con su propio edificio, que fue adquirido a un costo de 4.5 millones de lempiras. Inicialmente el CURNO empezó sus actividades académicas en el período corto del año 1997, con una matrícula de 325 alumnos y 12 docentes. Para el tercer período hubo un incremento en la matricula y se llegó a 520 estudiantes y 18 docentes.
             </p>
-            <strong>El aporte de la región ha consistido en:</strong>
-            <ul>
-                <li>Corporación Municipal de Danlí: 3.6 millones de lempiras consistentes en: 8 Manzanas de terreno con un valor de 3 millones de lempiras, 500,000.00 Lempiras para gastos administrativos y proceso de construcción, 100,000.00 Lempiras en equipo y maquinaria para agua potable, aguas negras y estacionamiento.</li>
-                <li>Tele maratón n organizada por el Grupo Gestor, Organización Manos Amigas, periodistas y propietarios de medios de comunicación 463,000.00 Lempiras</li>
-                <li>Aporte de la Universidad José Cecilio del Valle: Planos y Maqueta 200,000.00 Lempiras.</li>
-                <li>Aportación de FESTINAMA 2004: 90,000.00 Lempiras con lo cual se paga el diseño estructural.</li>
-                <li>Aporte de instituciones descentralizadas con sus gerencias regionales con sede en Danlí, ENEE, SANAA, HONDUTEL con un estimado de 250,000.00.</li>
-                <li>Supervisión del proyecto, como un aporte del Ing. Ovidio Mejía con un estimado de 165,000.00 Lempiras.</li>
-                <li>Aporte de alumnos del nivel medio de la región 40,000.00 Lempiras</li>
-                <li>Gestión del Diputado José Celín Discua ante el Congreso Nacional, SEFIN y Rectoría de la UNAH: 4.0 millones de lempiras.</li>
-            </ul>
             <img src="" alt="">
         </div>
         <hr>
         <div class="Mision">
             <h2>Misión</h2>
-            <p>Somos una unidad académica  tecnológica del nivel superior, responsables de formar profesionales y técnicos de excelencia, capaces de dirigir, producir y contribuir al desarrollo humano sostenible de la  región oriental del país a través de la investigación, vinculación social, fomentando la ciencia, la cultura, la equidad y el humanismo. </p>
+            <p></p>
         </div>
         <hr>
         <div class="Vision">
             <h2>Visión</h2>
-            <p>Ser la unidad académica del nivel superior referente en la Región Oriental, con talento humano  formado ,capacitado, innovador, humanista y comprometido en la formación de profesionales y técnicos competentes, emprendedores y éticos   en las áreas tecnológica, salud, agroindustrial  y otras disciplinas,  con las más altas competencias globales, capaces de generar y transferir conocimientos de calidad, partícipes del desarrollo social, económico, político y ambiental; mediante la gestión académica, administrativa,  participativa y transparente; desarrollando procesos de Investigación Científica  y vinculación social, fundamentados en los nuevos modelos de la ciencia y la educación.</p>
+            <p></p>
         </div>
     </div>
 
