--- a/Libreria/header.html
+++ b/Libreria/header.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-    <div class="container-fluid">
+<div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light bg-light">
             <a class="navbar-brand" href="#">DIIP-UNAH</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-1" aria-controls="navbar-1" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,7 +8,7 @@
             <div class="collapse navbar-collapse" id="navbar-1">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="../Pag-Principal/Index.html">Pagina Principal <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../Pag-Principal/index.html">Pagina Principal <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../Formularios-Sign-in-Alumnos/Sign-in.html">Primer Ingreso</a>
@@ -23,7 +23,7 @@
                             <a class="dropdown-item" href="../Formularios-Sign-in-Alumnos/Sign-in.html">
                                 Alumnos</a>
                             <a class="dropdown-item" href="../Formularios-Sign-in-catedraticos/Sign-in.html">
-                                Catedráticos</a>
+                                CatedrÃ¡ticos</a>
                             <a class="dropdown-item" href="../Formularios-Sign-in-Coordinadores/Sign-in.html">
                                 Coordinadores</a>
                             <a class="dropdown-item" href="../Formularios-Sign-in-Jefes-Departamento/Sign-in.html">
@@ -42,7 +42,7 @@
                             <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-VS.html">
                                 UNAH-VS</a>
                             <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-TEC_AGUAN.html">
-                                UNAH-TEC AGUÁN</a>
+                                UNAH-TEC AGUï¿½N</a>
                             <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-CURC.html">
                                 UNAH-CURC</a>
                             <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-CURLA.html">
@@ -66,23 +66,23 @@
                             <a class="dropdown-item" href="../Formulario-Facultades/Ciencia-Social.html">
                                 Ciencias Sociales</a>
                             <a class="dropdown-item" href="../Formulario-Facultades/.html">
-                                Química y Farmacia</a>
+                                QuÃ­mica y Farmacia</a>
                             <a class="dropdown-item" href="../Formulario-Facultades/.html">
-                                Odontología</a>
+                                OdontologÃ­a</a>
                             <a class="dropdown-item" href="../Formulario-Facultades/.html">
-                                Ciencias Jurídicas</a>
+                                Ciencias JurÃ­dicas</a>
                             <a class="dropdown-item" href="../Formulario-Facultades/Ingenieria.html">
-                                Ingeniería</a>
+                                IngenierÃ­a</a>
                             <a class="dropdown-item" href="../Formulario-Facultades/.html">
                                 Humanidades y Artes</a>
                             <a class="dropdown-item" href="../Formulario-Facultades/Ciencia-Espacial.html">
                                 Ciencias Espaciales</a>
                             <a class="dropdown-item" href="../Formulario-Facultades/.html">
-                                Ciencias Económicas, Administrativas y Contables</a>
+                                Ciencias EconÃ³micas, Administrativas y Contables</a>
                             <a class="dropdown-item" href="../Formulario-Facultades/Ciencia.html">
                                 Ciencias</a>
                             <a class="dropdown-item" href="../Formulario-Facultades/Ciencias-Medica.html">
-                                Ciencias Médicas</a>
+                                Ciencias MÃ©dicas</a>
                         </div>
                     </li>
                 </ul>
