--- a/Libreria/Pag-Alumnos.html
+++ b/Libreria/Pag-Alumnos.html
@@ -54,7 +54,7 @@
     </style>
 
 </head>
-<body style="font-famiy: 'sans serif';">
+<body style="font-family: 'K2D', sans-serif;">
         <div class="container-fluid" style="margin-top:70px;">
                 <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light bg-light">
                     <a class="navbar-brand" href="#">DIIP-UNAH</a>
@@ -204,11 +204,11 @@
             </div>
 
             <footer class="page-footer font-small unique-color-dark">
-                    <div style="background-color: #6351ce;">
+                    <div style="background-color: rgba(0,36,132,1);">
                         <div class="container">
                             <div class="row py-4 d-flex align-items-center">
                                 <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-                                    <h6 class="mb-0">Universidad Nacional Autónoma de Honduras</h6>
+                                    <h6 class="mb-0" style="color:white; weight:600;">Universidad Nacional Autónoma de Honduras</h6>
                                 </div>
                                 <div class="col-md-6 col-lg-7 text-center text-md-right social-icon">
                                     <!-- Facebook -->
