--- a/Libreria/Pag-Jefe-Depto.html
+++ b/Libreria/Pag-Jefe-Depto.html
@@ -174,7 +174,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12" style = "text-align:center;">
                         <h2>Creacion de Secciones</h2>
-                        <img class="rounded-circle" src="img/Listado.jpg" alt="Generic placeholder image" width="140" height="140">
+                        <img class="rounded-circle" src="img/secciones.jpg" alt="Generic placeholder image" width="140" height="140">
                         <p style = "margin-top: 20px;"><br>Aqui se podra crear una seccion con su debido catedratico en una asignatura especifica y cantidad de cupos solicitados.</p>
                         <p style = "margin-top: 50px;"><a class="btn btn-secondary" href="#" role="button">Cancelar Asignaturas</a></p>
                     </div>
