Aplicando mismo header y footer

--- a/Pag-Principal/index.html
+++ b/Pag-Principal/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Inicio-Universidad Nacional Autonoma De Honduras</title>
-    <link rel="icon" href="img/logo.ico">
+    <link rel="icon" href="../Libreria/img/logo.ico">
 
     <link href="https://fonts.googleapis.com/css?family=K2D:200,400,700" rel="stylesheet" >
     
@@ -16,15 +16,9 @@
     <link rel="stylesheet" href="../Libreria/css/bootstrap-complements.css">
     <link rel="stylesheet" href="../Libreria/css/estilos.css">
     
-    <style>
-        body{
-            padding-top: 56px;
-        }
-    </style>
-
     <script src = "../Libreria/js/jquery-3.3.1.min.js"></script>
     <script src = "../Libreria/js/jquery.flexslider.js"></script>
-    <script src="../Libreria/js/main.js"></script>
+    <script src = "../Libreria/js/main.js"></script>
 </head>
 <body>
     <!-- Header -->
